# crud-rust

front-end/: package-lock.json
front-end/src/: App.js  api.js
frontend/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/components/: ProductList.tsx  UserList.tsx  buttonMagic.tsx  hypertext.tsx  meteors.tsx  navbar.tsx  shimmerButton.tsx  signInButton.tsx  socialProof.tsx  textPage.tsx
frontend/src/components/magicui/: shimmer-button.tsx
frontend/src/pages/: _app.tsx  app.tsx  index.tsx
frontend/src/pages/api/: product.ts  user.ts
rest_api/: .env  Cargo.toml  Dockerfile  docker-compose.yml
rest_api/src/: main.rs
rest_api/src/controllers/: mod.rs  product_controller.rs  users_controller.rs
rest_api/src/db/: connection.rs  mod.rs
rest_api/src/models/: product.rs  user.rs
rest_api/src/services/: product_service.rs  user_service.rs
rest_api/src/utils/: http_responses.rs  mod.rs
