[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.9.0"
postgres = "0.19.9"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
dotenv = "0.15"
tokio-postgres = "0.7"

